
SVN /trunk
==========

- renamed tools to have unique prefixes
- added tools: vxfinger, vxid, userwebpages.cgi
- added manpages (generated from HTML)
- initial sgmap support (drv_ldap)

- [r551]: calling -V in various tools did not terminate the program
- [r552]: mdckuuid forgot to check for -i parameter
- [r553]: vxgroup{add,mod,del} forgot to check for first argument presence
- [r554]: vxdb_groupadd() for vxldap was incomplete
- [r618]: programs' -M option (select database) has been renamed to --vxdb
- [r619]: rename {user,group}{add,mod,del}'s -A and -B options to --after
  and --before to avoid clashes with pwdutils