@@ -46,9 +46,7 @@ PSWD_LEN=10
 GENPW_TYPE=zh
 
 # Encryption method for new passwords:
-#   des         (weak) (not supported on WIN32)
-#   md5         (not supported on WIN32)
-#   blowfish    (most secure)
+#   des (weak, don't use!), md5, blowfish, sha256 or sha512.
 #
 PSWD_METH=blowfish
 
